# embedded.ai.mtxslv

./: .gitignore  README.md  pyproject.toml
papers/: README.md  tinymlops_challenges.md  widening_access.md
projects/dataquest_projects/: handwritten_digits_classifier.ipynb
projects/other_projects/week_5/first_classifier/new_files/: README.md  data_segregation.ipynb  fetch_data.ipynb  preprocessing.ipynb  test.ipynb  train.ipynb
projects/other_projects/week_5/first_classifier/original_files/: data_segregation.ipynb  download_files.sh  test.ipynb  train.ipynb
projects/other_projects/week_8/: README.md
projects/other_projects/week_8/assignment/: ModifiedLeNet.ipynb
projects/other_projects/week_8/original_file/: LeNet.ipynb
